cabal-version:      2.4
name:               tcpecho
version:            0.1.0

author:             Malik Ammar Faisal
maintainer:         binfaisal.ammar@gmail.com


executable tcpecho
    main-is:          Main.hs

    build-depends:    
          async
        , base
        , monad-loops
        , network-simple
        , safe-exceptions
    hs-source-dirs:   app
    default-language: Haskell2010
